@@ -1,5 +1,10 @@
 2016-03-15  Ben Elliston  <bje@gnu.org>
 
+	* testsuite/runtest.all/options.exp: Properly clean up log files
+	left by the runtest under test.
+
+2016-03-15  Ben Elliston  <bje@gnu.org>
+
 	* testsuite/runtest.all/load_lib.exp: Typo fixes.
 
 2016-03-15  Ben Elliston  <bje@gnu.org>
